# ChangeLog for genkernel
# Copyright 2006-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  04 Oct 2007; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
  cd out of directory to be deleted for bug 194695. Thanks to Asmund
  Grammeltvedt <asmundg@big-oil.org> for pointing this out

  18 Sep 2007; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh,
  gen_initrd.sh:
  we don't ever want devfs in an initramfs
  check KERN_24 instead of DEVFS for 2.4 initrd generation

  17 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_cmdline.sh,
  gen_compile.sh, gen_determineargs.sh, gen_funcs.sh, gen_initrd.sh,
  genkernel, genkernel.8, genkernel.conf:
  Rename DEBUGLEVEL/DEBUGFILE to LOGLEVEL/LOGFILE to help reduce confusion.

  17 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_cmdline.sh,
  gen_configkernel.sh, genkernel:
  Some more generalcleanup and adding support for using a config file other
  than /etc/genkernel.conf to add flexibility.

  17 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  -pkg/module-init-tools-0.9.15-pre4.tar.bz2,
  -pkg/klibc-1.1.16-sparc2.patch, -pkg/klibc-1.2.1-nostdinc-flags.patch,
  -pkg/modutils-2.4.26.tar.bz2:
  Removing klibc/modutils/module-init-tools files, since we don't need any of
  them, anymore.

  17 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org> genkernel:
  It helps if I use 'g' when doing a sed.

  17 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_bootloader.sh,
  genkernel, genkernel.conf:
  Removed the use of GK_BIN variable, since it isn't necessary.

  17 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org> TODO, genkernel.conf:
  Updated TODO and cleaning up genkernel.conf a bit.

  17 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org> generic/linuxrc,
  netboot/misc/bin/net-setup, netboot/misc/etc/fstab:
  Remove some unnecessary copyright dates from a few files so we don't keep
  forgetting to update them when we modify the files.
