@@ -2,6 +2,10 @@
 # Copyright 2006-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  05 Oct 2007; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh,
+  gen_initrd.sh:
+  remove generic/modprobe and all supporting code, since busybox has modprobe
+
   04 Oct 2007; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
   cd out of directory to be deleted for bug 194695. Thanks to Asmund
   Grammeltvedt <asmundg@big-oil.org> for pointing this out
